Operator/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: mysql-operator
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: mysql-operator
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: maryembe/frontend-image3:latest 
        imagePullPolicy: Always
        ports:
          - containerPort: 80
